@@ -9,8 +9,8 @@ We recommend you to install :
 
  Python		http://www.python.org			version 2.4.2 or better
  wxPython	http://www.wxpython.org			version 2.6.3.x (ANSI)
- numpy		http://sourceforge.net/projects/numpy	version 0.9.8 or better
- matplotlib	http://matplotlib.sourceforge.net	version 0.87 or better
+ numpy		http://sourceforge.net/projects/numpy	version 1.0b5 or better
+ matplotlib	http://matplotlib.sourceforge.net	version 0.87.5 or better
 
 Running :
  "python itrade.py --help"	for command line help
